fix: register & navbar component

--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -65,6 +65,10 @@
         </div>
       </div>
     </div>
+    <div *ngIf="mostrarToast" class="toast-notification">
+  <div class="toast-content">{{toastMessage}}</div>
+</div>
+
   </div>
 
 
