--- a/src/app/pages/register/register.css
+++ b/src/app/pages/register/register.css
@@ -153,7 +153,48 @@ select.form-control {
   height: auto;
 }
 
+.toast-notification {
+  position: fixed;
+  bottom: 2rem;
+  right: 2rem;
+  z-index: 9999;
+  animation: fadeInOut 3s ease-in-out;
+}
+
+.toast-content {
+  background-color: var(--primary-color); /* o #0A5483 directamente */
+  color: #fff;
+  padding: 1.5rem 2rem;
+  border-radius: 1rem;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.25);
+  font-size: 1.2rem;
+  font-weight: 600;
+  min-width: 320px;
+  text-align: center;
+}
+
 /* ANIMACIONES */
+
+@keyframes fadeInOut {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  10% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  90% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+}
+
+
+
 @keyframes slideInLeft {
   from {
     opacity: 0;
