--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -82,7 +82,7 @@
       </div>
 
       <div class="d-flex flex-column text-center w-100 gap-3">
-        <a href="info-profile" class="offcanvas-link">Ver perfil</a>
+        <a href="/info-usuario" class="offcanvas-link">Ver perfil</a>
         <a href="#" class="offcanvas-link">Historial de test</a>
         <a href="#" class="offcanvas-link">Contacto</a>
       </div>
