fix: test component, resultados component

--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -15,8 +15,8 @@
 
   <div class="navbar-right">
     <ul class="nav-links">
-      <li><a href="#">¿Quienes Somos?</a></li>
-      <li><a href="#">¿Cómo funciona?</a></li>
+      <li><a href="">¿Quienes Somos?</a></li>
+      <li><a href="/home#como-funciona">¿Cómo funciona?</a></li>
       <li><a href="/inicio-form" class="survey-link">Iniciar Encuesta</a></li>
     </ul>
     <div
