--- a/src/app/carrera/carrera.html
+++ b/src/app/carrera/carrera.html
@@ -13,7 +13,7 @@
 
   <div class="carrera-actions d-flex justify-content-center gap-3 mt-5">
     <button class="btn  btn-regresar" (click)="volver()">Regresar</button>
-    <button class="btn  btn-donde">¿Dónde puedo estudiar?</button>
+    <button class="btn  btn-donde" (click)="irUniversidades()">¿Dónde puedo estudiar?</button>
   </div>
 </div>
 
