--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -16,7 +16,7 @@
 
 
 <!--How it works section-->
-<section class="how-it-works ">
+<section class="how-it-works" id="como-funciona">
     <h2 class="section-title text-center mb-5">¿Cómo funciona?</h2>
     <div class="row justify-content-center text-center">
 
