--- a/src/app/info-user/info-user.html
+++ b/src/app/info-user/info-user.html
@@ -5,34 +5,80 @@
   <form class="form-info">
     <div class="form-group">
       <label>Nombre</label>
-      <input type="text" class="form-control" [value]="nombre" readonly />
+      <input type="text" class="form-control" name="nombre" [(ngModel)]="nombre" [readonly]="!modoEdicion"  />
     </div>
 
     <div class="form-group">
       <label>Apellido</label>
-      <input type="text" class="form-control" [value]="apellido" readonly />
+      <input type="text" class="form-control" name="apellido" [(ngModel)]="apellido" [readonly]="!modoEdicion"  />
     </div>
 
     <div class="form-group">
       <label>Correo electrónico</label>
-      <input type="email" class="form-control" [value]="email" readonly />
+      <input type="email" class="form-control" name="email" [(ngModel)]="email" readonly />
     </div>
 
     <div class="form-group">
       <label>Fecha de nacimiento</label>
-      <input type="date" class="form-control" [value]="fechaNacimiento" readonly />
+      <input type="date" class="form-control" name="fechaNacimiento" [(ngModel)]="fechaNacimiento" [readonly]="!modoEdicion"  />
     </div>
 
     <div class="form-group">
       <label>Nombre del colegio</label>
-      <input type="text" class="form-control" [value]="colegio" readonly />
+      <input type="text" class="form-control" name="colegio" [(ngModel)]="colegio"  [readonly]="!modoEdicion"  />
     </div>
 
     <div class="form-group">
       <label>Rol</label>
-      <input type="text" class="form-control" [value]="rol" readonly />
+      <input type="text" class="form-control" name="rol" [(ngModel)]="rol" readonly />
     </div>
   </form>
+  <div class="form-actions mt-4 d-flex justify-content-between">
+  <button type="button" class="btn btn-modify" (click)="toggleEdicion()">
+    {{ modoEdicion ? 'Guardar información' : 'Modificar información' }}
+  </button>
+  <button class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#modalEliminar">
+    Eliminar cuenta
+  </button>
+</div>
+
+<!-- Modal Confirmación Guardado -->
+<div class="modal fade" id="modalConfirmarGuardado" tabindex="-1" aria-labelledby="confirmModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content text-center">
+      <div class="modal-header">
+        <h5 class="modal-title" id="confirmModalLabel">¿Deseas guardar los cambios?</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+      </div>
+      <div class="modal-body">
+        Los datos del usuario serán actualizados. ¿Deseas continuar?
+      </div>
+      <div class="modal-footer d-flex justify-content-between">
+        <button type="button" class="btn btn-secondary" (click)="cancelarEdicion()" data-bs-dismiss="modal">Cancelar</button>
+        <button type="button" class="btn btn-success" (click)="confirmarGuardado()" data-bs-dismiss="modal">Sí, guardar</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Modal de confirmación para eliminar cuenta -->
+<div class="modal fade" id="modalEliminar" tabindex="-1" aria-labelledby="modalEliminarLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header bg-danger text-white">
+        <h5 class="modal-title" id="modalEliminarLabel">Confirmar eliminación</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+      </div>
+      <div class="modal-body">
+        ¿Estás seguro de que deseas eliminar tu cuenta? Esta acción no se puede deshacer.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+        <button type="button" class="btn btn-danger" (click)="confirmarEliminacion()">Eliminar cuenta</button>
+      </div>
+    </div>
+  </div>
+</div>
 </div>
 
 </div>
+
