--- a/src/app/universidades-carrera/universidades-carrera.html
+++ b/src/app/universidades-carrera/universidades-carrera.html
@@ -1,8 +1,8 @@
 <div class="universidades-wrapper container py-5">
-  <h1 class="mb-3">¿Dónde puedo estudiar {{ nombreCarrera }}?</h1>
+  <h1 class="mb-3">¿Dónde puedo estudiar {{ carrera?.name }}?</h1>
   <p class="mb-5">
     A continuación te mostramos en qué universidades puedes estudiar
-    <strong>{{ nombreCarrera }}</strong>.
+    <strong>{{ carrera?.name }}</strong>.
   </p>
 
   <div class="accordion" id="accordionUniversidades">
