feat: historial-tests

--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -83,7 +83,7 @@
 
       <div class="d-flex flex-column text-center w-100 gap-3">
         <a href="/info-usuario" class="offcanvas-link">Ver perfil</a>
-        <a href="#" class="offcanvas-link">Historial de test</a>
+        <a href="/historial-tests" class="offcanvas-link">Historial de test</a>
         <a href="#" class="offcanvas-link">Contacto</a>
       </div>
       <div
