--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -109,7 +109,7 @@
               Recordarme
             </label>
           </div>
-          <a href="#" class="forgot-link">¿Olvidaste tu contraseña?</a>
+          <a href="/change-password" class="forgot-link">¿Olvidaste tu contraseña?</a>
         </div>
 
          <button type="submit" class="btn btn-login w-100 mb-4">Iniciar Sesión</button>
