--- a/src/app/historial-tests/historial-tests.css
+++ b/src/app/historial-tests/historial-tests.css
@@ -4,6 +4,17 @@
     min-height: 100vh;
     padding: 2rem 1rem;
 }
+.btn-filtrar {
+  background-color: var(--primary-color);
+  color: white;
+  border: none;
+}
+
+.btn-filtrar:hover {
+  background-color: #08486c; 
+  color: white;
+}
+
 .historial-container {
   max-width: 900px;
   margin: auto;
@@ -45,4 +56,28 @@ td, th {
 .btn-verTest:hover {
     background-color: var(--primary-color);
     color: #ffffff;
+}
+.toast-mensaje {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: var(--primary-color);
+  color: white;
+  padding: 1rem 1.5rem;
+  border-radius: 12px;
+  font-size: 1.1rem;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+  animation: fadeIn 0.3s ease;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(10px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
