--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -157,7 +157,7 @@
 </div>
 
 <section class="disclaimer">
-  <div class="container">
+  <div class="container disclaimer-content">
     <h3 class="disclaimer-title">Importante</h3>
     <p class="disclaimer-text">
       Este es un proyecto universitario con el fin de apoyar a jovenes
