--- a/src/app/home/home.css
+++ b/src/app/home/home.css
@@ -1,132 +1,18 @@
-
-.navbar {
-  position: sticky;
-  top: 0;
-  z-index: 1000;
-  background-color: white;
-  width: 100%;
-  height: 100px;
-  background-color: var(--background-color);
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.15);
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0 2rem;
-}
-.navbar-left {
-  display: flex;
-  align-items: center;
-  gap: 0.5rem;
-}
-.navbar-left h3{
-  font-size: 2rem;
-  color: var(--primary-color);
-  font-weight: 600;
-}
 .title-accent {
   color: #63AA3A;
 }
 .title-color-accent {
   color: var(--accent-color);
 }
-.navbar-left .logo {
-  height: 70px;
-}
-
-.navbar-right {
-  display: flex;
-  align-items: center;
-  gap: 2rem;
-}
-
-.nav-links {
-  list-style: none;
-  display: flex;
-  gap: 1.5rem;
-}
-
-.nav-links li a {
-  text-decoration: none;
-  color: var(--primary-color);
-  font-weight: 500;
-  transition: color 0.3s ease;
-}
-
-.nav-links li a:hover {
-  color: var(--dark-blue);
-}
-.survey-link {
-  background-color: var(--accent-color);
-  color: #000 !important;
-  padding: 0.4rem 1rem;
-  border-radius: 6px;
-  font-weight: 600;
-  transition: background-color 0.3s ease;
-}
-
-.survey-link:hover {
-  background-color: #c7e734;
-  text-decoration: none;
-}
-
-.profile-icon {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 40px;
-  width: 40px;
-  border-radius: 50%;
-  cursor: pointer;
-  color: var(--primary-color);
-  transition: background-color 0.3s ease;
-}
-
-.profile-icon:hover {
-  background-color: rgba(10, 84, 131, 0.1); 
-}
-
-.username {
-  font-size: 1.2rem;
-  font-weight: 600;
-  color: var(--primary-color);
-}
-
-.offcanvas-link {
-  text-decoration: none;
-  color: var(--dark-blue);
-  font-weight: 500;
-  font-size: 1rem;
-  transition: color 0.3s ease;
-}
-
-.offcanvas-link:hover {
-  color: var(--highlight-blue);
-  text-decoration: underline;
-}
-.logout-btn {
-  background-color: var(--red-false-color);
-  color: white;
-  border: none;
-  padding: 0.6rem 1.5rem;
-  border-radius: 8px;
-  font-weight: 600;
-  font-size: 0.95rem;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-}
-
-.logout-btn:hover {
-  background-color: #c53030;
-}
-
-
 .banner {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 4rem 2rem;
+  padding: 4rem 5rem;
   gap: 3rem;
-  background-color: white;
+background-color: #F8F8EC;
+opacity: 1;
+background-image:  repeating-radial-gradient( circle at 0 0, transparent 0, #F8F8EC 17px ), repeating-linear-gradient( #e0e0dc55, #e0e0dc );
   height: 75vh;
 }
 
@@ -257,8 +143,17 @@
 
 .disclaimer {
   background-color:var(--background-color); 
-  padding: 5rem 2rem;
+  padding: 2rem 2rem 5rem 2rem;
 
+}
+.disclaimer-content {
+  margin: 0 auto;
+  padding: 1.5rem 2rem;
+  width:fit-content;
+  text-align: center;
+  border: solid 3px var(--red-false-color);
+  background-color: #B2352F15;
+  border-radius: 12px;
 }
 
 .disclaimer-title {
