--- a/src/app/pages/register/register.html
+++ b/src/app/pages/register/register.html
@@ -124,19 +124,23 @@
 
           <!-- Colegio -->
           <div class="form-group mb-4">
-            <label for="school" class="form-label"
-              >Nombre del colegio<span class="requiredText">*</span></label
-            >
-            <input
-              type="text"
+            <label for="school" class="form-label">
+              Colegio<span class="requiredText">*</span>
+            </label>
+            <select
               class="form-control"
               id="school"
-              placeholder="Nombre de tu colegio"
               name="school"
-              [(ngModel)]="school"
+              [(ngModel)]="selectedSchoolId"
               required
-            />
+            >
+              <option value="" disabled selected>Selecciona tu colegio</option>
+              <option *ngFor="let school of schools" [value]="school.id">
+                {{ school.name }}
+              </option>
+            </select>
           </div>
+
           <!--ROL COLEGIO FALTA-->
           <!-- Rol -->
           <div class="form-group mb-4">
@@ -166,11 +170,10 @@
       </div>
     </div>
     <div class="toast-notification" *ngIf="mostrarToast">
-  <div class="toast-content">
-    <span class="toast-message">🎉 Registro completado con éxito</span>
-  </div>
-</div>
-
+      <div class="toast-content">
+        <span class="toast-message">🎉 Registro completado con éxito</span>
+      </div>
+    </div>
   </div>
 
   <!-- Carrusel a la derecha -->
