--- a/src/app/info-user/info-user.html
+++ b/src/app/info-user/info-user.html
@@ -25,7 +25,7 @@
 
     <div class="form-group">
       <label>Nombre del colegio</label>
-      <input type="text" class="form-control" name="colegio" [(ngModel)]="colegio"  [readonly]="!modoEdicion"  />
+      <input type="text" class="form-control" name="colegio" [(ngModel)]="colegio"  readonly  />
     </div>
 
     <div class="form-group">
