feat: encuesta validacion

--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -207,7 +207,7 @@
     <ul class="footer-links">
       <li><a href="#">Política de privacidad</a></li>
       <li><a href="#">Términos de uso</a></li>
-      <li><a href="#">Contacto</a></li>
+      <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSdUvVJnmLOB0VdU9Zv8Ynb4-LoolZZ1Mv7n3oKx7Aoq15IGiA/viewform?usp=header" target="_blank">Encuesta Validación</a></li>
     </ul>
   </div>
 </footer>
