fix:incidencias resueltas

--- a/src/app/change-password/change-password.html
+++ b/src/app/change-password/change-password.html
@@ -69,7 +69,7 @@
           (ngModelChange)="onPasswordInput()"
         />
         <span class="toggle-password" (click)="verPassword = !verPassword">
-          <i [ngClass]="verPassword ? 'bi bi-eye-slash' : 'bi bi-eye'"></i>
+          <i [ngClass]="verPassword ? 'bi bi-eye-slash-fill' : 'bi bi-eye-fill'"></i>
         </span>
       </div>
 
