--- a/src/app/pages/register/register.html
+++ b/src/app/pages/register/register.html
@@ -118,6 +118,7 @@
               id="birthdate"
               name="birthdate"
               [(ngModel)]="birthdate"
+              [max]="fechaHoy"
               required
             />
           </div>
