--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -137,7 +137,7 @@
           <div class="input-wrapper">
             <div class="input-icon"><i class="fas fa-lock"></i></div>
             <input
-              type="password"
+              [type]="verPassword ? 'text' : 'password'"
               class="form-control"
               id="password"
               placeholder="Tu contraseña"
@@ -145,8 +145,8 @@
               [(ngModel)]="password"
               required
             />
-            <button type="button" class="password-toggle">
-              <i class="fas fa-eye"></i>
+            <button class="password-toggle" (click)="verPassword = !verPassword" type="button">
+               <i [ngClass]="verPassword ? 'bi bi-eye-slash-fill' : 'bi bi-eye-fill'"></i>
             </button>
           </div>
         </div>
